<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditActivity">

    <TextView
        android:id="@+id/textPorte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="160dp"
        android:layout_marginLeft="5dp"
        android:text="@string/ask_size"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="108dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/textPorte"
        android:layout_toEndOf="@+id/textPorte"
        android:layout_marginBottom="94dp">

        <RadioButton
            android:id="@+id/radioBig"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Big"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Medium"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioSmall"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Small"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btAdd"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="26dp"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:background="@color/colorAccept"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btAdd"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorCancelar"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/ask_name"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:text="@string/ask_name" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/ask_species"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputSpecies"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textSpecies"
        android:layout_toRightOf="@+id/textSpecies"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textRaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:text="@string/ask_race"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputRace"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textRaca"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/textRaca"
        android:layout_toRightOf="@+id/textRaca"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:text="@string/ask_weight"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/inputWeight"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textPeso"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/inputRace"
        android:layout_toEndOf="@+id/textPeso"
        android:layout_toRightOf="@+id/textPeso"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="195dp"
        android:text="@string/ask_date"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/inputDate"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textDate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="date"
        android:singleLine="true" />


</RelativeLayout>