<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/askNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/ask_name"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/askNome"
        android:layout_toRightOf="@+id/askNome"
        android:text="@string/empty"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/askEspecie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:text="@string/ask_species"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txEspecie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/askEspecie"
        android:layout_toEndOf="@+id/askEspecie"
        android:layout_toRightOf="@+id/askEspecie"
        android:text="@string/empty"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/askRaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/askPeso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-90dp"
        android:text="@string/ask_race"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txRaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/askRaca"
        android:layout_toEndOf="@+id/askRaca"
        android:layout_toRightOf="@+id/askRaca"
        android:text="@string/empty"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/askPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="97dp"
        android:text="@string/ask_weight"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/askPeso"
        android:layout_toEndOf="@+id/askPeso"
        android:layout_toRightOf="@+id/askPeso"
        android:text="@string/empty_weight"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/askData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="132dp"
        android:text="@string/ask_date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/askData"
        android:layout_toEndOf="@+id/askData"
        android:layout_toRightOf="@+id/askData"
        android:text="@string/empty"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/askPorte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="168dp"
        android:text="@string/ask_size"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txPorte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/askPorte"
        android:layout_toEndOf="@+id/askNome"
        android:layout_toRightOf="@+id/askNome"
        android:text="@string/empty"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btRemover"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="219dp"
        android:drawableBottom="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/btAlterar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignTop="@+id/btRemover"
        android:layout_toEndOf="@+id/askEspecie"
        android:layout_toRightOf="@+id/askEspecie"
        android:drawableBottom="@android:drawable/ic_menu_rotate" />

</RelativeLayout>